[tool.poetry]
name = "onnigiri"
version = "0.3.1"
description = "onnx-divider"
authors = ["Idein Inc."]
license = "Apache-2.0"
readme = "README.md"
keywords = ["onnx"]
repository = "https://github.com/Idein/onnigiri"

[tool.poetry.dependencies]
python = "^3.9"
onnx = "^1.9.0"
onnxruntime = "^1.2.0"
onnx-simplifier = "^0.4"

[tool.poetry.dev-dependencies]
pysen = {version = "^0.10.1"}
black = "23.11.0"
flake8 = "6.1.0"
flake8-bugbear = "23.9.16"
isort = "5.12.0"
mypy = "^1.0"

[tool.poetry.scripts]
onnigiri = "onnigiri.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 128
py_version = "py39"

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
